--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,7 @@
 body {
   font-family: "Poppins", sans-serif;
   color: #000;
+  font-style: 14px;
 }
 
 .container {
@@ -23,6 +24,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
+  margin-bottom: 76px;
 }
 
 .logo {
@@ -62,4 +64,26 @@ body {
 
 .nav-link.active {
   color: #606060;
+}
+
+/* Header content */
+.header-row {
+  display: flex;
+  justify-content: space-between;
+  column-gap: 30px;
+}
+
+.header-content {
+  max-width: 500px;
+  margin-top: 124px;
+}
+.header-heading {
+  margin-bottom: 20px;
+  font-weight: 600;
+  font-size: 44px;
+  line-height: 66px;
+}
+
+.header-content p {
+  line-height: 2;
 }
