--- a/css/main.css
+++ b/css/main.css
@@ -29,7 +29,7 @@ body {
 
 .logo {
   position: relative;
-  padding: 0 6px 3px 0;
+  padding: 0 12px 3px 0;
   line-height: 1;
   font-weight: 700;
   font-size: 32px;
@@ -85,5 +85,34 @@ body {
 }
 
 .header-content p {
+  line-height: 2;
+}
+
+/* Service */
+
+.services {
+  padding: 90px 0;
+}
+
+.services-row {
+  display: flex;
+  column-gap: 30px;
+}
+
+.service-card {
+}
+
+.service-card-img {
+  margin-bottom: 30px;
+}
+
+.service-card-title {
+  font-weight: 600;
+  font-size: 24px;
+  margin-bottom: 10px;
+  text-transform: uppercase;
+}
+
+.service-card p {
   line-height: 2;
 }
