--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,11 @@ body {
   margin: 0 auto;
 }
 
+.title-1 {
+  font-weight: 600;
+  font-size: 34px;
+}
+
 /* header */
 
 .header {
@@ -112,4 +117,38 @@ body {
 
 .service-card p {
   line-height: 2;
+}
+
+.portfolio {
+  background: #f1f1f1;
+  padding: 30px 0;
+}
+
+.container {
+}
+
+.portfolio-title {
+  text-align: center;
+  margin-bottom: 70px;
+}
+
+.project {
+  text-align: center;
+}
+
+.project + .project {
+  margin-top: 90px;
+}
+
+.poject-img {
+  margin-bottom: 40px;
+}
+
+.project-title {
+  font-size: 18px;
+}
+
+.project-title a {
+  color: #000;
+  text-decoration: underline;
 }
