--- a/css/media.css
+++ b/css/media.css
@@ -31,4 +31,30 @@
     top: 46px;
     right: 30px;
   }
+
+  .header-nav {
+    margin-bottom: 50px;
+  }
+  .header-row {
+    flex-direction: column;
+    row-gap: 20px;
+  }
+  .header-content {
+    margin-top: 0;
+  }
+  .header-img {
+    text-align: center;
+  }
+}
+
+@media (max-with: 700px) {
+  .header-heading {
+    font-size: 34px;
+  }
+  .header-heading span {
+    font-size: 28px;
+  }
+  .services-row {
+    flex-direction: column;
+  }
 }
