--- a/css/media.css
+++ b/css/media.css
@@ -54,7 +54,7 @@
   .header-heading span {
     font-size: 28px;
   }
-  .services-row {
-    flex-direction: column;
+  .services {
+    padding: 60px 0;
   }
 }
