--- a/css/media.css
+++ b/css/media.css
@@ -5,6 +5,10 @@
   .nav-button {
     display: block;
   }
+
+  .nav.open .nav-button {
+    position: fixed;
+  }
   .nav.open .nav-list {
     display: flex;
     flex-direction: column;
@@ -26,7 +30,7 @@
     color: black;
   }
   .nav-button {
-    position: fixed;
+    position: absolute;
     z-index: 1;
     top: 46px;
     right: 30px;
@@ -56,5 +60,36 @@
   }
   .services {
     padding: 60px 0;
+  }
+
+  .portfolio,
+  .contacts {
+    padding: 60px 0;
+  }
+
+  .portfolio-title {
+    margin-bottom: 50px;
+  }
+
+  .project-img {
+    margin-bottom: 30px;
+  }
+
+  .project + .project {
+    margin-top: 55px;
+  }
+
+  .contacts-title,
+  .contacts-content,
+  .contact-social {
+    margin-bottom: 20px;
+  }
+
+  .contacts-button {
+    margin-bottom: 70px;
+  }
+
+  .contact-social {
+    column-gap: 50px;
   }
 }
